# firecracker-sdk

./: .gitignore  Cargo.toml  README.md  justfile
api_client/: Cargo.toml  README.md
api_client/.openapi-generator/: FILES
api_client/docs/: SnapshotLoadParams.md
api_client/src/apis/: default_api.rs
api_client/src/models/: arm_register_modifier.rs  balloon.rs  balloon_hinting_status.rs  balloon_start_cmd.rs  balloon_stats.rs  balloon_stats_update.rs  balloon_update.rs  boot_source.rs  cpu_config.rs  cpu_template.rs  cpuid_leaf_modifier.rs  cpuid_register_modifier.rs  drive.rs  entropy_device.rs  error.rs  firecracker_version.rs  full_vm_configuration.rs  instance_action_info.rs  instance_info.rs  logger.rs  machine_configuration.rs  memory_backend.rs  memory_hotplug_config.rs  memory_hotplug_size_update.rs  memory_hotplug_status.rs  metrics.rs  mmds_config.rs  msr_modifier.rs  network_interface.rs  network_override.rs  partial_drive.rs  partial_network_interface.rs  pmem.rs  rate_limiter.rs  serial_device.rs  snapshot_create_params.rs  snapshot_load_params.rs  token_bucket.rs  vcpu_features.rs  vm.rs  (+1 more)
src/: api.rs  builder.rs  dto.rs  firecracker.rs  lib.rs  types.rs
tests/: builder.rs  integration.rs
